# casa-rs

./: .dockerignore  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.ci-minimal  Dockerfile.dev  LICENSE  README.md  TESTING.md  crates.js  help.html  imaging-dataflow-comparison.html  imaging-interface-map.html  index.html  justfile  mkdocs.yml  objects.inv  settings.html  src-files.js
crates/casa-aipsio/: Cargo.toml
crates/casa-aipsio/examples/: t_aipsio.rs
crates/casa-aipsio/src/: aipsio.rs  buffer.rs  demo.rs  lib.rs
crates/casa-aipsio/tests/: taipsio_example.rs
crates/casa-calibration/: Cargo.toml
crates/casa-calibration/src/: bandpass.rs  callib.rs  cli.rs  constants.rs  continuum_subtract.rs  corrected_export.rs  execute.rs  fluxscale.rs  gencal.rs  least_squares.rs  lib.rs  managed_output.rs  model.rs  plan.rs  plots.rs  session.rs  solve.rs  stats.rs  summary.rs  task_contract.rs  writer.rs
crates/casa-calibration/tests/: apply_execute.rs  apply_plan.rs  bandpass_solve.rs  callib.rs  casa_calibration_parity.rs  continuum_subtract.rs  fluxscale.rs  gain_solve.rs  gencal.rs  plots.rs  stats.rs  summary.rs
crates/casa-coordinates/: Cargo.toml
crates/casa-coordinates/examples/: t_coordinate.rs
crates/casa-coordinates/src/: coordinate.rs  coordinate_system.rs  direction.rs  lib.rs  linear.rs  obs_info.rs  projection.rs  record_utils.rs  spectral.rs  stokes.rs  tabular.rs
crates/casa-images/: Cargo.toml
crates/casa-images/examples/: profile_image_analysis.rs  profile_image_expr_save_as.rs  t_image.rs  t_image_expr.rs  t_image_summary.rs  t_subimage.rs
crates/casa-images/src/: analysis.rs  beam.rs  browser_render.rs  command_schema.rs  error.rs  expr_file.rs  expr_parser.rs  image.rs  image_expr.rs  image_expr_compiled.rs  image_expr_ops.rs  image_info.rs  image_view.rs  imagebrowser_session.rs  iterator.rs  lib.rs  mask.rs  movie.rs  subimage.rs  temp_image.rs
crates/casa-images/tests/: provider_ui_schema.rs  wave14_lel_inventory.rs
crates/casa-imaging/: Cargo.toml  build.rs
crates/casa-imaging/examples/: fft_backend_validate.rs  inspect_aw_cache.rs
crates/casa-imaging/src/: apple_fft.rs  awprojection.rs  beam.rs  cube.rs  error.rs  execution.rs  execution_plan.rs  fft.rs  fft_backend.rs  gridder.rs  image_product.rs  lib.rs  profile.rs  single_plane_plan.rs  trace.rs  types.rs  weighting.rs  worker_plan.rs
crates/casa-logging/: Cargo.toml
crates/casa-logging/src/: lib.rs
crates/casa-measures-data/: Cargo.toml
crates/casa-measures-data/data/: casa-measures-runtime.provenance.json  finals2000A.data  observatories.json
crates/casa-measures-data/examples/: query_eop.rs  update_eop.rs  update_measures.rs
crates/casa-measures-data/src/: bundled.rs  bundled_observatories.rs  lib.rs  observatory.rs  source.rs  spectral_line.rs  update.rs
crates/casa-measures-tools/: Cargo.toml
crates/casa-measures-tools/src/: lib.rs
crates/casa-ms/: Cargo.toml
crates/casa-ms/examples/: profile_msexplore.rs  t_ms_create.rs  t_ms_derived.rs  t_ms_iter.rs  t_ms_selection.rs
crates/casa-ms/src/: builder.rs  column_def.rs  error.rs  flagging.rs  grouping.rs  least_squares.rs  lib.rs  listobs.rs  metadata.rs  ms.rs  msexplore.rs  plot.rs  plot_data.rs  plot_visibility.rs  presentation.rs  probes.rs  selection.rs  selection_helpers.rs  selection_syntax.rs  simulation.rs  simulation_task.rs  spectral_selection.rs  task_contract.rs  test_helpers.rs  transform.rs  ui_schema.rs  validate.rs  visibility_buffer.rs  write_session.rs
crates/casa-ms/tests/: flagging.rs  logging_cli.rs  ms_create_roundtrip.rs  ms_data_interop.rs  ms_full_verify_vs_cpp.rs  ms_library_coverage.rs  ms_perf_vs_cpp.rs  msexplore_casa_parity.rs  msexplore_cli.rs  pointing_subtable_regression.rs  simulation_ms.rs  source_subtable_regression.rs  spectral_frame_parity.rs  transform.rs
crates/casa-notebook/: Cargo.toml
crates/casa-notebook/src/: assistant.rs  corpus.rs  ids.rs  lib.rs  markdown.rs  receipt.rs  store.rs  tutorial.rs  visualization.rs
crates/casa-notebook/tests/: assistant_contract.rs  corpus_contract.rs  receipt_v2.rs  tutorial_contract.rs  visualization_contract.rs  wave1_contract.rs
crates/casa-provider-contracts/: Cargo.toml
crates/casa-provider-contracts/resources/: application-catalog.json  parameter-catalog.json  parameter-surfaces.json
crates/casa-provider-contracts/src/: application.rs  builtin.rs  components.rs  lib.rs  parameters.rs  projection.rs  provider.rs  semantic.rs  session_protocol.rs  tests.rs
crates/casa-table-read/: Cargo.toml
crates/casa-table-read/src/: aipsio_buf.rs  data_type.rs  incremental_stman.rs  lib.rs  stman_array_file.rs  table_control.rs
crates/casa-task-runtime/: Cargo.toml
crates/casa-task-runtime/src/: cli.rs  completion.rs  diagnostic.rs  edit.rs  invocation.rs  lib.rs  normalize.rs  profile.rs  runtime.rs  safety.rs  session.rs  storage.rs  ui_projection.rs
crates/casa-task-runtime/tests/: last_lifecycle.rs
crates/casa-test-support/: Cargo.toml  build.rs
crates/casa-test-support/examples/: profile_lattice_basic_compare.rs
crates/casa-test-support/src/: aipsio_oracle.rs  gridder_interop.rs  hogbom_interop.rs  image_oracle.rs  image_oracle_impl.rs  lattice_oracle.rs  lattice_oracle_impl.rs  lib.rs  measures_interop.rs  measures_oracle.rs  ms_interop.rs  oracle_ffi.rs  oracle_runtime.rs  (+9 more)
crates/casa-values/: Cargo.toml
crates/casa-vla/: Cargo.toml  build.rs
crates/casacore-aipsio/: Cargo.toml
crates/casacore-calibration/: Cargo.toml
crates/casacore-coordinates/: Cargo.toml
crates/casacore-images/: Cargo.toml
crates/casacore-lattices/: Cargo.toml
crates/casacore-measures-data/: Cargo.toml
crates/casacore-measures-tools/: Cargo.toml
crates/casacore-ms/: Cargo.toml
crates/casacore-tablebrowser-protocol/: Cargo.toml
crates/casacore-tables/: Cargo.toml
crates/casacore-test-support/: Cargo.toml  build.rs  tAipsIO_tmp.data  tAipsIO_tmp.mf  tTableQuantumShim.tabdsc
crates/casacore-types/: Cargo.toml
crates/casars-frontend-services/: Cargo.toml  uniffi.toml
(+59363 files in other folders)
