[workspace]
resolver = "2"
members = [
    "crates/casa-provider-contracts",
    "crates/casars",
    "crates/casars-imager",
    "crates/casars-python",
    "crates/casars-imagebrowser-protocol",
    "crates/casars-tablebrowser-protocol",
    "crates/casa-types",
    "crates/casa-values",
    "crates/casa-aipsio",
    "crates/casa-table-read",
    "crates/casa-calibration",
    "crates/casa-measures-tools",
    "crates/casa-tables",
    "crates/casa-lattices",
    "crates/casa-coordinates",
    "crates/casa-images",
    "crates/casa-imaging",
    "crates/casa-measures-data",
    "crates/casa-test-support",
    "crates/casa-ms",
    "crates/ratatui-graphics",
]

[workspace.package]
version = "0.14.0"
edition = "2024"
license = "LGPL-3.0-or-later"
rust-version = "1.85"
description = "Rust implementation of casacore-compatible persistent data I/O"
repository = "https://github.com/bglenden/casa-rs"

[workspace.dependencies]
ndarray = "0.17"
num-complex = "0.4"
ratatui-graphics = { path = "crates/ratatui-graphics", default-features = false, features = ["panel", "plotters", "kitty"] }
rustfft = "6.4"
sofars = "0.6"
thiserror = "2.0"

# Performance benchmarks compare Rust vs C++ (compiled optimized by cc::Build).
# Without these overrides, Rust tests run at opt-level=0 (debug), producing
# misleading 1000x+ ratios. Enable optimization for the hot-path crates and
# their key dependencies so perf comparisons are apples-to-apples.
[profile.test.package.sofars]
opt-level = 2
[profile.test.package.casa-types]
opt-level = 2
[profile.test.package.casa-tables]
opt-level = 2
[profile.test.package.casa-aipsio]
opt-level = 2
[profile.test.package.casa-ms]
opt-level = 2
[profile.test.package.casa-imaging]
opt-level = 2
[profile.test.package.casa-test-support]
opt-level = 2
[profile.test.package.ndarray]
opt-level = 2
[profile.test.package.num-complex]
opt-level = 2
[profile.test.package.rustfft]
opt-level = 2

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
suspicious = "deny"
