[package]
name = "casa-calibration"
description = "Calibration-table compatibility and workflow substrate for casa-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
slow-tests = []

[dependencies]
casacore-ms = { path = "../casacore-ms" }
casacore-tables = { path = "../casacore-tables" }
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
casacore-test-support = { path = "../casacore-test-support" }
ndarray.workspace = true
tempfile = "3"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[lints]
workspace = true
