[package]
name = "casa-images"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "casacore-compatible typed images and lazy expressions"
repository.workspace = true

[lints]
workspace = true

[dependencies]
casa-coordinates = { path = "../casa-coordinates" }
casa-provider-contracts = { path = "../casa-provider-contracts" }
casars-imagebrowser-protocol = { path = "../casars-imagebrowser-protocol" }
casa-lattices = { path = "../casa-lattices" }
casa-tables = { path = "../casa-tables" }
casa-types = { path = "../casa-types" }
fitsio = "0.21"
image = { version = "0.25", default-features = false, features = ["png"] }
ndarray.workspace = true
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
casa-test-support = { path = "../casa-test-support" }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "full_palette", "ttf"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "full_palette", "ab_glyph"] }
