[package]
name = "casa-imaging"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure imaging kernels and CLEAN orchestration for CASA-compatible imaging"
repository.workspace = true

[lints]
workspace = true

[dependencies]
casa-coordinates = { path = "../casa-coordinates" }
casa-images = { path = "../casa-images" }
casa-lattices = { path = "../casa-lattices" }
casa-types = { path = "../casa-types" }
libm = "0.2"
ndarray.workspace = true
num-complex.workspace = true
rustfft.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }
objc2-metal = { version = "0.3.2", default-features = false, features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
] }

[dev-dependencies]
casa-test-support = { path = "../casa-test-support" }
serial_test = "3"
