[package]
name = "casa-measures-data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Measures data table discovery (internal)"
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
update = ["dep:ureq"]

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror.workspace = true
ureq = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
