[package]
name = "casa-measures-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internal maintenance tools for casacore measures data"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casa-measures-data = { path = "../casa-measures-data" }
flate2 = "1"
serde_json = "1"
tar = "0.4"
time = { version = "0.3", features = ["formatting"] }

[[bin]]
name = "package_snapshot"
path = "src/bin/package_snapshot.rs"
