[package]
name = "casa-notebook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Markdown notebook, immutable execution receipt, and project recording contracts for casa-rs"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
flate2 = "1"
fs2 = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror.workspace = true
toml = "0.8"
ureq = "3"
uuid = { version = "1", features = ["serde", "v7"] }
