[package]
name = "casa-provider-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Canonical provider contract bundle types shared across casa-rs surfaces"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casa-types = { path = "../casa-types" }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
