[package]
name = "casa-task-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared parameter resolution, sparse TOML profiles, and managed Last state for casars surfaces"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casa-provider-contracts = { path = "../casa-provider-contracts" }
casa-types = { path = "../casa-types" }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
