[package]
name = "casa-values"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Generic CASA scalar/array/record value model (internal)"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
