[package]
name = "casa-vla"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native VLA archive disk-reader support for importvla-style workflows"
repository.workspace = true

[lints]
workspace = true

[dependencies]
casa-provider-contracts = { path = "../casa-provider-contracts" }
casa-ms = { path = "../casa-ms" }
casa-tables = { path = "../casa-tables" }
casa-types = { path = "../casa-types" }
ndarray.workspace = true
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
casa-test-support = { path = "../casa-test-support" }
tempfile = "3"
