[package]
name = "casa-vla"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native VLA archive disk-reader support for importvla-style workflows"
repository.workspace = true
autotests = false

[features]
default = []
cpp-interop-tests = ["casa-test-support/cpp-interop-tests"]

[lints]
workspace = true

[dependencies]
casa-provider-contracts = { path = "../casa-provider-contracts" }
casa-task-runtime = { path = "../casa-task-runtime" }
casa-logging = { path = "../casa-logging" }
casa-measures-data = { path = "../casa-measures-data" }
casa-ms = { path = "../casa-ms" }
casa-tables = { path = "../casa-tables" }
casa-types = { path = "../casa-types" }
ndarray.workspace = true
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
casa-test-support = { path = "../casa-test-support" }
tempfile = "3"

[build-dependencies]
pkg-config = "0.3"

[[test]]
name = "cpp_first_record_parity"
path = "tests/cpp_first_record_parity.rs"
required-features = ["cpp-interop-tests"]

[[test]]
name = "cpp_import_ms_parity"
path = "tests/cpp_import_ms_parity.rs"
required-features = ["cpp-interop-tests"]

[[test]]
name = "cpp_import_ms_parity_matrix"
path = "tests/cpp_import_ms_parity_matrix.rs"
required-features = ["cpp-interop-tests"]

[[test]]
name = "cpp_vlafiller_spw_seed_debug"
path = "tests/cpp_vlafiller_spw_seed_debug.rs"

[[test]]
name = "real_archive_inventory"
path = "tests/real_archive_inventory.rs"

[[test]]
name = "real_archive_smoke"
path = "tests/real_archive_smoke.rs"

[[test]]
name = "real_importvla_parity"
path = "tests/real_importvla_parity.rs"
required-features = ["cpp-interop-tests"]

[[test]]
name = "spectral_conversion_xp1_debug"
path = "tests/spectral_conversion_xp1_debug.rs"
required-features = ["cpp-interop-tests"]
