[package]
name = "casacore-aipsio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AipsIO binary serialization codec (internal)"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
thiserror.workspace = true
