[package]
name = "casacore-images"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "casacore-compatible typed images and lazy expressions"
repository.workspace = true

[lints]
workspace = true

[dependencies]
casacore-coordinates = { path = "../casacore-coordinates" }
casacore-lattices = { path = "../casacore-lattices" }
casacore-tables = { path = "../casacore-tables" }
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
