[package]
name = "casacore-measures-data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Measures data table discovery (internal)"
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
update = ["dep:ureq"]

[dependencies]
ureq = { version = "3", optional = true }
