[package]
name = "casacore-measures-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internal maintenance tools for casacore measures data"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casacore-measures-data = { path = "../casacore-measures-data" }
casacore-tables = { path = "../casacore-tables" }
casacore-types = { path = "../casacore-types" }

[[bin]]
name = "import_observatories"
path = "src/bin/import_observatories.rs"
