[package]
name = "casacore-ms"
description = "Typed MeasurementSet (MS) API for radio interferometry data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
casacore-tables = { path = "../casacore-tables" }
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
num-complex.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
casacore-test-support = { path = "../casacore-test-support" }
flate2 = "1"
tar = "0.4"
tempfile = "3"

[[bin]]
name = "msinfo"
path = "src/bin/msinfo.rs"

[[bin]]
name = "listobs"
path = "src/bin/listobs.rs"

[lints]
workspace = true
